Task 1: Apply recipes to upgrade Java and framework dependencies.